@@ -1,4 +1,0 @@
-Math::Interpolate
-
-This module contains several useful routines for interpolating data
-sets and finding where a given value lies in a sorted list.
