@@ -1,16 +1,0 @@
-# $NetBSD: Makefile,v 1.29 2021/05/24 19:52:59 wiz Exp $
-
-DISTNAME=	Math-Interpolate-1.06
-PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	6
-CATEGORIES=	math perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Math/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-COMMENT=	Perl module for interpolating data
-LICENSE=	${PERL5_LICENSE}
-
-PERL5_PACKLIST=		auto/Math/Interpolate/.packlist
-
-.include "../../lang/perl5/module.mk"
-.include "../../mk/bsd.pkg.mk"
