@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.3301 2021/06/07 14:10:11 wiz Exp $
+$NetBSD: CHANGES-2021,v 1.3302 2021/06/07 14:11:55 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -5308,3 +5308,4 @@ Changes to the packages collection and infrastructure in 2021:
 	Updated security/tor-browser to 10.0.17 [wiz 2021-06-07]
 	Updated security/tor-browser-noscript to 11.2.8 [wiz 2021-06-07]
 	Updated devel/p5-CLI-Osprey to 0.08nb2 [wiz 2021-06-07]
+	Removed math/p5-Math-Interpolate [wiz 2021-06-07]
